--- a/ProfileApp/app/src/main/res/layout/activity_main.xml
+++ b/ProfileApp/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,48 +9,49 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
 
-    <!-- Foto de Perfil -->
-    <ImageView
-        android:id="@+id/profileImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_profile_placeholder"
-        android:layout_gravity="center_horizontal"
-        android:contentDescription="Foto de perfil" />
+        <!-- Foto de Perfil -->
+        <ImageView
+            android:id="@+id/profileImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_profile_placeholder"
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="Foto de perfil" />
 
-    <!-- Nome -->
-    <TextView
-        android:id="@+id/nameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nome do Usuário"
-        android:textSize="24sp"
-        android:layout_gravity="center_horizontal"
-        android:paddingTop="8dp"/>
-    <!-- Descrição -->
-    <TextView
-        android:id="@+id/descriptionText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Breve descrição do usuário."
-        android:textSize="16sp"
-        android:layout_gravity="center_horizontal"
-        android:paddingTop="4dp"/>
+        <!-- Nome -->
+        <TextView
+            android:id="@+id/nameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nome do Usuário"
+            android:textSize="24sp"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="8dp"/>
 
-    <!-- Emprego Atual -->
-    <TextView
-        android:id="@+id/currentJobText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Emprego Atual: Desenvolvedor Android"
-        android:textSize="16sp"
-        android:paddingTop="8dp"/>
+        <!-- Descrição -->
+        <TextView
+            android:id="@+id/descriptionText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Breve descrição do usuário."
+            android:textSize="16sp"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="4dp"/>
+
+        <!-- Emprego Atual -->
+        <TextView
+            android:id="@+id/currentJobText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Emprego Atual: Desenvolvedor Android"
+            android:textSize="16sp"
+            android:paddingTop="8dp"/>
+
         <!-- Experiências -->
         <LinearLayout
             android:id="@+id/experienceLayout"
@@ -68,8 +70,22 @@
 
             <!-- Experiências serão adicionadas dinamicamente -->
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/projectLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingTop="16dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Projetos"
+                android:textSize="18sp"
+                android:paddingBottom="8dp"/>
+
+        </LinearLayout>
     </LinearLayout>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
